# ur10e-7th-axis

./: README.md
conbot_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
conbot_moveit_config/config/: initial_positions.yaml  joint_limits.yaml  kinematics.yaml  moveit_controllers.yaml  ros2_controllers.yaml  ur.ros2_control.xacro  ur.srdf  ur.urdf.xacro
conbot_moveit_config/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
construction_bot/: CMakeLists.txt  package.xml
construction_bot/config/: initial_positions.yaml  ur_controllers.yaml
construction_bot/config/ur10e/: joint_limits.yaml  visual_parameters.yaml
construction_bot/launch/: lift_ur_moveit.launch.py  ur_sim_control.launch.py  view_ur.launch.py
construction_bot/rviz/: view_robot.rviz  view_robot_moveit.rviz
construction_bot/urdf/: lift_kit_macro.xacro  ur.ros2_control.xacro  ur.urdf.xacro  ur_macro.xacro
construction_bot/world/: no_gravity.sdf
vertical_lift_kit/: CMakeLists.txt  package.xml
vertical_lift_kit/config/: trajectory_controllers.yaml
vertical_lift_kit/launch/: display_lift.launch.py  display_lift_control.launch.py  gz_sim_lift.launch.py  test_controllers_mock.launch.py
vertical_lift_kit/rviz/: lift_kit.rviz
vertical_lift_kit/urdf/: vertical_lift_kit.urdf.xacro
